Add endpoint configuration for GitHub repository in CI/CD pipeline

--- a/_pipelines/AzPipelineDocWriter_CICD.yml
+++ b/_pipelines/AzPipelineDocWriter_CICD.yml
@@ -15,6 +15,7 @@ resources:
       type: github
       name: ivesma/AzPipelineTemplates
       ref: refs/heads/v0.0.1
+      endpoint: svc_pipeline_templates
 
 steps:
 - template: steps/step-Search-Files-Path.yml@templates
