--- a/_pipelines/AzPipelineDocWriter_CICD.yml
+++ b/_pipelines/AzPipelineDocWriter_CICD.yml
@@ -13,7 +13,7 @@ resources:
   repositories:
     - repository: templates
       type: github
-      name: ivesma/AzPipelineTemplates
+      name: AzPipelineTemplates
       ref: refs/heads/v0.0.1
       endpoint: svc_pipeline_templates
 
