Fix repository name in CI/CD pipeline configuration

--- a/_pipelines/AzPipelineDocWriter_CICD.yml
+++ b/_pipelines/AzPipelineDocWriter_CICD.yml
@@ -13,8 +13,8 @@ resources:
   repositories:
     - repository: templates
       type: github
-      name: AzPipelineTemplates
-      ref: refs/heads/v0.0.1
+      name: ivesma/AzPipelineTemplates
+      ref: v0.0.1
       endpoint: svc_pipeline_templates
 
 steps:
