Fix GitHub endpoint reference in CI/CD pipeline configuration

--- a/_pipelines/AzPipelineDocWriter_CICD.yml
+++ b/_pipelines/AzPipelineDocWriter_CICD.yml
@@ -15,7 +15,7 @@ resources:
       type: github
       name: ivesma/AzPipelineTemplates
 #      ref: main
-      endpoint: AzTemplates
+      endpoint: ivesma
 
 steps:
 - template: steps/step-Search-Files-Path.yml@templates
