--- a/_pipelines/AzPipelineDocWriter_CICD.yml
+++ b/_pipelines/AzPipelineDocWriter_CICD.yml
@@ -12,7 +12,7 @@ resources:
       type: github
       name: ivesma/AzPipelineTemplates # this is a public repo
 #      ref: main
-#      endpoint: AzPipelineTemplates
+      endpoint: github.com_ivesma
 
 steps:
 - template: steps/step-Search-Files-Path.yml@templates
