--- a/_pipelines/AzPipelineDocWriter_CICD.yml
+++ b/_pipelines/AzPipelineDocWriter_CICD.yml
@@ -7,15 +7,9 @@ pool:
   vmImage: ubuntu-latest
 
 resources:
-  repositories:
-    - repository: templates
-      type: github
-      name: ivesma/AzPipelineTemplates # this is a public repo
-#      ref: main
-      endpoint: github.com_ivesma
 
 steps:
-- template: steps/step-Search-Files-Path.yml@templates
+- template: /_pipelines\templates\steps\step-Search-Files-Path.yml
   parameters:
     CopyToFolder: false
     FileNames:
