Fix path separator in CI/CD pipeline template reference

--- a/_pipelines/AzPipelineDocWriter_CICD.yml
+++ b/_pipelines/AzPipelineDocWriter_CICD.yml
@@ -9,7 +9,7 @@ pool:
 resources:
 
 steps:
-- template: /_pipelines\templates\steps\step-Search-Files-Path.yml
+- template: /_pipelines/templates/steps/step-Search-Files-Path.yml
   parameters:
     CopyToFolder: false
     FileNames:
