Update ReturnFullPath parameter to true and remove unused script step in CI/CD pipeline

--- a/_pipelines/AzPipelineDocWriter_CICD.yml
+++ b/_pipelines/AzPipelineDocWriter_CICD.yml
@@ -17,11 +17,9 @@ steps:
       VarName: 'module.File.Path'
     - Name: 'AzPipelineDocWriter.pssettings'
       VarName: 'module.Settings.Path'
-    ReturnFullPath: false
+    ReturnFullPath: true
     RootFolder: $(Build.SourcesDirectory)
     TargetFolder: $(build.artifactstagingdirectory)
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
